--- a/html-css/week1/week1.css
+++ b/html-css/week1/week1.css
@@ -48,3 +48,11 @@ ul {
   width: 1em;
   padding-right: 7px;
 }
+@media only screen and (max-width: 600px) {
+  .leftside {
+    width: 100%;
+  }
+  .rightside {
+    width: 100%;
+  }
+}
