--- a/html-css/week2/week2.css
+++ b/html-css/week2/week2.css
@@ -140,4 +140,8 @@ section ul li h4 {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
+  .mainimg {
+    width: 100%;
+    height: 40vh;
+  }
 }
