--- a/react/react1/week1/public/style.css
+++ b/react/react1/week1/public/style.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0;
+}
 header {
   background-color: #f5ba13;
   padding: 16px 32px;
@@ -14,7 +17,7 @@ header h1 {
 footer {
   position: absolute;
   bottom: 0;
-  width: 99%;
+  width: 100%;
   text-align: center;
 }
 footer p {
